modificaciones de estilo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       class="navbar navbar-expand-lg navbar-dark bg-dark"
       aria-label="Offcanvas navbar large"
     >
-      <div class="container-fluid px-3 py-2">
+      <div class="container-fluid p-4">
         <a class="navbar-brand" href="#">
           <img src="./assets/img/logo_demo.png" alt="logo" />
         </a>
@@ -117,16 +117,16 @@
           <div class="col-12">
             <h1 class="pt-4">Hola, Soy Gerardo Apablaza</h1>
           </div>
-          <div class="col-lg-8 py-3">
+          <div class="col-lg-8 p-4">
             <p class="fst-italic text-start m-0">
               Hola soy Gerardo! aqui va un resumen personal, pero no se como
               empezarlo... soy de santiago (sector sur de la capitale), tengo 33
-              años, padre de un gordo hermoso de 8 años, soy fanático de las
+              años, padre de un gordo hermoso de 9 años, soy fanático de las
               placas de desarrollo ESP32 y amante de las luces RGB. <br />
               <br />
-              Tengo 2 acuarios, una Gata llamada Zafira y un Hámster "Panda".
+              Tengo 2 acuarios, mi Gata "Zafira" y un Hámster llamado "Panda".
               <br /><br />
-              Tengo una Reina por la cual daría mi vida y se llama Verónica, mi
+              Y una Reina por la cual daría mi vida que se llama Verónica, mi
               amada compañera de vida. NOTA ANECDÓTICA: El hecho que mi madre me
               vendió a mi <del>dueña</del> compañera por una miserable
               <del>(pero deliciosa)</del> cajetilla de cigarros (una de 20')
@@ -139,7 +139,7 @@
 
     <!-- CAROUSEL -->
     <section class="container py-2">
-      <h2 class="text-center py-1 text-decoration-underline">Proyectos Personales</h2>
+      <h2 class="text-center py-1 text-decoration-underline fw-bold">Proyectos Personales</h2>
       <div
         id="carouselExampleCaptions"
         class="carousel slide"
@@ -225,7 +225,7 @@
 
     <!-- TRABAJOS-DESAFIOLATAM -->
     <section class="container-fluid py-2">
-      <h2 class="text-center py-1 text-decoration-underline">Proyectos Desafio LATAM</h2>
+      <h2 class="text-center py-1 text-decoration-underline fw-bold">Proyectos Desafio LATAM</h2>
       <div class="row mx-auto">
         <div class="col-md-6 col-lg-4 my-3">
           <div class="card" style="width: 100%">
@@ -331,7 +331,7 @@
 
     <!-- FORM-CONTACT -->
     <section class="container py-2">
-      <h2 class="display-4 fw-bold text-center my-4 text-decoration-underline">Contacto</h2>
+      <h2 class="fw-bold text-center text-decoration-underline">Contacto</h2>
       <form>
         <div class="form-group mb-4">
           <!-- <label class="mb-2">Nombre</label> -->
@@ -359,7 +359,7 @@
 
     <!-- FOOTER -->
     <footer class="bg-dark text-center text-light p-4">
-      <p class="mb-0">Gerardo Apablaza 2022.</p>
+      <p class="mb-0 fst-italic">Gerardo Apablaza 2022.</p>
     </footer>
 
     <!-- SCRIPT-JS-PARA-BOOTSTRAP-v5 -->
