--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
     <!-- TRABAJOS-DESAFIOLATAM -->
     <section class="container-fluid py-2">
-      <h2 class="text-center py-1 text-decoration-underline fw-bold">Proyectos Desafio LATAM</h2>
+      <h2 class="text-center py-1  fw-bold">Proyectos Desafio LATAM</h2>
       <div class="row mx-auto">
         <div class="col-md-6 col-lg-4 my-3">
           <div class="card" style="width: 100%">
